--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@supabase/supabase-js": "^2.49.7",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.0.9",
+    "@types/js-cookie": "^3.0.6",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "flatpickr": "^4.6.13",
+    "js-cookie": "^3.0.5",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
